--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^4.6.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.6.0",
+    "ng-bootstrap": "^1.6.3",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
